tests/paczka1/small_fuzzy/97504440.err
Error in line 5: 9bhE8EhjB A867 36,8
Error in line 1: A213 A213 10,1
Error in line 8: 9bhE8EhjB A171 85,9
Error in line 9: A213 A171 93,4
Error in line 13: A213 A213 77,3
